# BIMEP

./: .gitignore  BIMEP2024.cpp  BIMEP2024.sln  BIMEP2024.vcxproj  BIMEP2024.vcxproj.filters  BIMEPCandidate.cpp  BIMEPCandidate.h  BIMEPCandidates.cpp  BIMEPCandidates.h  BIMEPCommon.cpp  BIMEPCommon.h  BIMEPDefinition.cpp  BIMEPDefinition.h  BIMERCandidate.cpp  CMakeLists.txt  main.cpp
